--- a/sections/AxiomaticSetTheory.tex
+++ b/sections/AxiomaticSetTheory.tex
@@ -1,479 +1,42 @@
 \chapter{Axiomatic Set Theory}
-\section{Zermelo-Frankel Axioms}
-\subsection{Axiom of Existence, Extensionality, Restricted Comprehension, and Foundation}
-\begin{rem}
-    From this chapter and onward, we will no longer write proofs in pure symbols, for writing proof like this is extremely inconvenient and daunting for the readers and the authors. We will write proofs in natural language from now on. But the reader should under
-\end{rem}
-In previous chapters, we have already gone through Naive Set Theory. We have witnessed a careless use of set would yield gruesome contradictions. Therefore, until now, we have only used set very carefully. We wish to develop a system of axiomatic set theory that would put clear demarcation on what is definable and what is not. We have already constructed the ZFC model in the previous chapter. We will now enter such a model and develop of Mathematics in its entirety from here.\\
+\section{Zermelo-Frankel Set Theory}
+In the previous chapter on Naive set theory we have already developed a minimal account of sets. Now that we have transferred our domain of discussion from the metalanguage to the object language, we will continue our discussion of it.\\
+~\\
+A question one might ask is : Why do we need axiomatisation? Why don't we just continue our discussion in natural language. Our preceding discussion on set theory rely on an "trial-and-error" method. We give out a first characterisation of a concept, find some problems with it, revise it with a better one. This give rise to a problem --- What if we missed something? What if we were in fact mistaken with our characterisation without knowing it? To prevent our fourth crisis in Mathematics, we would like to introduce an axiomatic system. The validity of all theorems in this system rely on a small set of axioms. Then we can direct all our attention to only those axioms instead of inspecting every construction we have made. Only an axiomatised system can give us hope in devloping a valid account of Mathematics. But reader should always bear in mind an axiomatised system only ensures the validity of the language, but the language itself is not the entirety of Mathematics.\\
+~\\
+In the ontology of Zermelo-Frankel Set Theory(ZFC), everything is a set. This means every object in ZFC is either a collection or an empty set. But Mathematical objects are not themselves sets, at least we do not expect them do. Sets are merely a useful and powerful way to \textit{represent} those objects. This is why we must not confuse the language with the subject of discourse. This point would require more discussion. But they are only possible once we have reached the construction of different kinds of number.\\
 
-To start off, there will be nothing for us to work on if not a single set exist. Hence, the following axiom
+\newpage
+We will define some notations that we already semantically know their meaning. We will reiterate them in symbolic logic.
 \begin{ax}
-    \textbf{(Axiom of Existence)} There is a set ($\vdash \exists x(x=x)$)
-\end{ax}
-As we have discussed in naive set theory, set equality should be determined extensionally, i.e. two sets are equal when they have the same elements. 
-\begin{ax}
-    \textbf{(Axiom of Extensionality)} Suppose $A,B$ are sets, then the following are equivalent
+    \textbf{(Zermelo-Frankel Axioms)}
+    ~\\
     \begin{itemize}
-        \item $A = B$
-        \item for any $x$, $x\in A$ if and only if $x\in B$.
+        \item[\textbf{ZFC1}]\textbf{(Axiom of Existence)} A set exists.\\
+        $\vdash \exists x(x=x)$
+        \item[\textbf{ZFC2}]\textbf{(Axiom of Foundation)} All sets contains a member that is disjoint to itself\\
+        $\vdash \forall x(\exists y(y\in x)\rightarrow \exists z(z\in x\wedge \lnot\exists w(w\in z\wedge w\in x)))$
+        \item[\textbf{ZFC3}]\textbf{(Axiom of Extension)} Two sets are equal if and only if they have the same elements\\
+        $\vdash \forall x\forall y(x=y\leftrightarrow \forall z(z\in x\leftrightarrow z\in y))$
+        \item[\textbf{ZFC4}]\textbf{(Axiom Schema of Specification)} Given a predicate $\varphi$. Let $A$ be a set, then there is a set $B$ such that for all $x\in B$ if and only if $x\in A$ and $\varphi x$.\\
+        $\vdash \forall x\exists y\forall z(z\in y\leftrightarrow z\in x\wedge \varphi x)$
+        \item[\textbf{ZFC5}]\textbf{(Axiom of Pairing)} Let $x,y$ be objects. Then there is a set containing $x$ and $y$.\\
+        $\vdash \forall x\forall y\exists z (x\in z\wedge y\in z)$
+        \item[\textbf{ZFC6}]\textbf{(Axiom of Union)} For each collection, there is a set that contains all the members of each sets in the collection.\\
+        $\vdash \forall x\exists y \forall z\forall w(w\in y\wedge y\in x\to w\in y)$ 
+        \item[\textbf{ZFC7}]\textbf{(Axiom of Power)} There is a collection that contains all the subsets of a set.
+        $\vdash \forall x\exists y\forall z (\forall w(w\in z\to w\in x))\to z\in y$
+        \item[\textbf{ZFC8}]\textbf{(Axiom Schema of Replacement)}
+        \item[\textbf{ZFC9}]\textbf{(Axiom of Infinity)} There is a set that contains the empty set and if $x$ is a member of the set, then $x\cup\set{x}$ is also a member of the set.\\
+        $\vdash \exists x((\exists y(\forall z(z\not\in y))\wedge y\in x)\wedge \forall w(w\in x\to \exists u (\forall v(v\in u\leftrightarrow v\in w\vee v= w))\wedge u\in x))$
+        \item[\textbf{ZFC10}]\textbf{(Axiom of Choice)} For every collection, there is a set that contains exactly one element from each set of that collection.\\
+        $\vdash \forall x((\exists a (a\in x)\wedge \forall r\forall s(r\in x\wedge s\in x\wedge  r\neq s\to\forall t(t\in r\leftrightarrow t\not\in s)))\to \exists y\forall z(z\in x\to \exists w(w\in z\wedge w\in y\wedge (\forall \ell (\ell\in z\wedge \ell \in y\to \ell = w)))))$ 
     \end{itemize}
-    ($\vdash \forall x\forall y (x=y\leftrightarrow \forall z(z\in x\leftrightarrow z\in y))$)
 \end{ax}
-By these two axiom along, it allows us to define subsets 
-
-\begin{ax}
-    \textbf{(Axiom schema of restricted comprehension)} Let $\varphi$ be a predicate and $A$ be a set. Then there exist a set $B$ such that for any $x$, $x\in B$ if and only if $x\in A$ and $\varphi x$. ($\vdash \forall x\exists y\forall z(z\in y\leftrightarrow z\in x\wedge \varphi x)$)
-\end{ax}
-From this axiom, I am only picking out elements that are already pre-existing by themselves.\\
 \begin{rem}
-    A curious point can be pointed out here. The natural language formulation of this axiom is rather odd. In predicate logic, quantifiers do NOT range across predicates, so the writing "Let $\varphi$ be a predicate" is not technically legal. In the formal language formulation of this axiom, we are not confronted with this issue, the "proposition" $\vdash \forall x\exists y\forall z(z\in y\leftrightarrow z\in x\wedge \varphi x)$ is really left as a schema, the readers can substitute $\varphi$ with any predicates they favour. Hence, the word "schema" in the name of the axiom.
+    I know, the axioms are ugly. An unconditional pursuit for rigor would result in a loss of mathematical beauty and intuition. Please bear with me, we will return to more accessible plain English formulation in a section or two.
 \end{rem}
-\begin{prop}
-    Let $A$ be a set and $\varphi$ be a predicate. Then the set defined by specification is unique
-\end{prop}
-\begin{proof}
-    Let $A$ be a set and $\varphi$ is predicate, then let $B,C$ be sets specified by the Axiom Schema of Restricted Comprehension. Then for any $x$, $x\in B$ if and only if $x\in A$ and $\varphi x$ and $x\in C$ if and only if $x\in A$ and $\varphi x$. Therefore, we have $x\in B$ if and only if $x\in C$. Hence, $B=C$.
-\end{proof}
 \begin{rem}
-    For simplicity, we can write $B$ as $\set{x\in A|\phi x}$
+    All the relevant proof and definition related to the Axiom of Extension, Axiom Schema of Specification, Axiom of Pairing, Axiom of Union, and Axiom of Power could be rewritten into symbolic logic and inserted here. But for the sake of brevity, we will only hereby prove the major results. 
 \end{rem}
-\begin{thm}
-    There exist a set $E$, called an \textbf{empty set}, such that for any $x$, $x\not\in \empty$. 
-\end{thm}
-\begin{proof}
-    By the axiom of existence, there exist a set $A$. Let $E = \set{x\in A|x\neq x}$, then for any $x$, since $x=x$, then it is not the case that $x\neq x$. So, $x\not\in E$.
-\end{proof}
-\begin{prop}
-    Let $A$ be a set and $\varphi$ be a predicate, then $\set{x\in A|\varphi x}\subseteq A$.
-\end{prop}
-\begin{proof}
-    Trivial.
-\end{proof}
-\begin{prop}
-    The empty set is unique. 
-\end{prop}
-\begin{proof}
-    Let $E,E'$ be empty sets. Then for any $x$, $x\not\in E$. This makes the proposition "for any $x$, if $x\in E$ then $x\in E'$" true. Therefore, we have $E\subseteq E'$. By arguing the same way for $E'$, we have $E'\subseteq E$. Hence, $E= E'$.
-\end{proof}
-\begin{rem}
-    The empty set is denoted $\empty$.
-\end{rem}
-\begin{prop}
-    For any set $A$, $\empty\subseteq A$.
-\end{prop}
-\begin{proof}
-    Since $x\not\in\empty$ for any $x$, the proposition "for any $x$, if $x\in \empty$ then $x\in A$" is true. So $\empty\subseteq A$.
-\end{proof}
-\begin{defn}
-    (Set intersection) Let $A,B$ be sets, the \textbf{intersection} of $A$ and $B$, written $A\cap B$, is the set $A\cap B:= \set{x\in A|x\in B}$
-\end{defn}
-\begin{prop}
-    (Commutativity of set intersection) For any set $A,B$, $A\cap B = B\cap A$.
-\end{prop}
-\begin{proof}
-    ~
-    \begin{itemize}
-        \item ($\subseteq$) For any $x$, suppose $x\in A\cap B$, then $x\in A$ and $x\in B$. Then $x\in B$ and $x\in A$. So, $x\in B\cap A$.
-        \item ($\supseteq$) By a similar argument, we can deduce that for any $x\in B\cap A$, $x\in A\cap B$.
-        Therefore, $A\cap B = B\cap A$.
-    \end{itemize}
-\end{proof}
-\begin{prop}
-    (Associativity of set intersection) For any set $A,B,C$, $(A\cap B)\cap C = A\cap (B \cap C)$
-\end{prop}
-\begin{proof}
-    For any $x$, the following are equivalent 
-    \begin{align*}
-        & x\in (A\cap B) \cap C\\
-        \Leftrightarrow & x\in A\cap B \text{ and } x\in C\\
-        \Leftrightarrow & (x\in A\text{ and } x\in B) and \in C\\
-        \Leftrightarrow & x\in A \text{ and }(x\in B\text{ and  }x\in C)\\
-        \Leftrightarrow & x\in A \text{ and }(x\in B\cap C)\\
-        \Leftrightarrow & x\in A\cap(B\cap C)
-    \end{align*}
-    So, $(A\cap B)\cap C = A\cap(B\cap C)$
-\end{proof}
-\begin{prop}
-    For any set $A$, $A\cap A = A$
-\end{prop}
-\begin{proof}
-    ~
-    \begin{itemize}
-        \item ($\subseteq$) For all $x$, suppose $x\in A\cap A$. Then $x\in A$ and $x\in A$ and hence $x\in A$. Therefore, $x\in A$.
-        \item ($\supseteq$) For all $x\in A$, we have $x\in A$ and hence $x\in A$ and $x\in A$. So, $x\in A\cap A$ 
-    \end{itemize}
-\end{proof}
-\begin{prop}
-    For all set $A$, $A\cap \empty = \empty$
-\end{prop}
-\begin{proof}
-    ~
-    \begin{itemize}
-        \item ($\subseteq$) for any $x\in A\cap \empty$, we have $x\in \empty$.
-        \item ($\supseteq$) for any $x$. Since $x\not\in \empty$. Then it is not that case that $x\in A$ and $x\in \empty$. So, $x\not\in A\cap \empty$ and therefore if $x\in A\cap \empty$, then $x\in \empty$.
-    \end{itemize}
-\end{proof}
-\begin{prop}
-    For all set $A,B,C$, if $A\subseteq B$ and $A\subseteq C$, then $A\subseteq B\cap C$.
-\end{prop}
-\begin{proof}
-    For any $x\in A$, since $A\subseteq B$ and $A\subseteq C$, we have $x\in B$ and $x\in C$. So, $x\in B\cap C$. 
-\end{proof}
-\begin{defn}
-    (Disjoint) Let $A,B$ be sets. $A,B$ are \textbf{disjoint} if $A\cap B = \empty$
-\end{defn}
-\begin{defn}
-    (Pairwise disjoint) Let $A$ be a set, $A$ is \textbf{pairwise disjoint} when for any $x,y\in A$, if $x\neq y$, then $x\cap y= \empty$
-\end{defn}
-\begin{defn}
-    (Set complement) Let $A,B$ be sets. Then the \textbf{complement} of $A$ with respect of $B$, denoted $A\setminus B$, is the set $A\setminus B := \set{x\in A|x\not\in B}$
-\end{defn}
-\begin{defn}
-    For any set $A$, $A\setminus \empty = A$
-\end{defn}
-\begin{proof}
-    ~
-    \begin{itemize}
-        \item ($\subseteq$) For any $x$, if $x\in A\setminus \empty$, then $x\in A$ and $x\not\in \empty$. Then $x\in A$. Hence, $A\setminus \empty \subseteq A$.
-        \item ($\supseteq$) For any $x$, if $x\in A$. By definition of empty set, $x\not\in A$. So, $x\in A$ and $x\not\in \empty$. Hence, $x\in A\setminus \empty$. Therefore, $A\subseteq A\setminus\empty$.
-    \end{itemize}
-    Therefore, $A\setminus \empty= A$.
-\end{proof}
-\begin{prop}
-    For any set $A$, $A\setminus A = \empty$ 
-\end{prop}
-\begin{proof}
-    For any $x$, $x\not\in\empty$ by definition and it is not the case that $x\in A$ and $x\not\in A$. So, $x\not\in\empty$ and $x\not\in A\setminus A$. Then if $x\in\empty$ then $x\in A\setminus A$, and if $x\in A\setminus A$ then $x\not\in \empty$. Therefore, $A\setminus A = \empty$.
-\end{proof}
-\begin{prop}
-    For any set $A,B$, $A\setminus B \subseteq A$
-\end{prop}
-\begin{proof}
-    Pick any $x\in A\setminus B$, then we have $x\in A$ and $x\not\in B$. In particular, we have $x\in A$ and hence $A\setminus B \subseteq B$.
-\end{proof}
-Now there is still one problem lingering. The axiom of restricted comprehension has prevented us from \textit{constructing} sets that contains itself, i.e. sets that have the property $x\in x$. But what if such a set \textit{already existed in the first place}? Readers might wonder why do we want to prevent any set from containing itself. Don't we already prevented Russell's paradox via restricted comprehension? Consider this : Suppose a set $y$ with the property $y\in y$ exists. By the Axiom Schema of Restricted Comprehension, the set $x = \set{zs\in y|z=y}$
-\subsection{Axiom of Pairing, Union, and Power Set} 
-The readers may have complainted by now that the axiom schema of specification may be too restrictive. The only set we know exist for sure is the empty set. And the axiom of comprehension only allows us to create set from an existing set. As a result, we could not make much out from these. Hence, we rely on three axioms that create a larger set from pre-existing sets.\\
-The \textit{Axiom of Pair} describe the existence of a doubleton, the \textit{Axiom of Union} for a generalised union, and the \textit{Axiom of Power Set} for the power set.
-\begin{ax}
-    \textbf{(Axiom of Pairing)} For all $x,y$, there is a set $A$ such that $x\in A$ and $y\in A$. ($\vdash \forall x\forall y\exists z (x\in z\vee y\in z))$
-\end{ax}
-\begin{ax}
-    \textbf{(Axiom of Union)} Let $\mathscr A$ be a set, then there exists a set $B$ such that for any $A\in \mathscr A$, if $x\in A$, then $x\in B$. ($\vdash \forall x\exists y\forall z (z\in x\rightarrow z\in y)$)
-\end{ax}
-\begin{ax}
-    \textbf{(Axiom of Power Set)} Suppose $A$ be a set, then there is a set $P$ such that if $B\subseteq A$ is a subset, then $B\in P$. ($\vdash \forall x\exists y\forall z (z\subseteq x\rightarrow z\in y)$)
-\end{ax}
-It is actually wrong to say these axioms captures the idea of doubletons, unions, and power sets exactly. Take the Axiom of Pairing as an example, let $x,y$ be two distinct object, then the set $\set{x,y,\square, \triangle,\text{Hello}}$ also satisfies the conditions stated in the axiom. $\square, \triangle$, and Hello are unwanted element that we would like to be excluded from our set. The set will be the desired doubleton only after we applied the Axiom Schema of Restricted Comprehension.
-\begin{prop}
-    ($Doubleton$) For any $x,y$, there is a unique set $A$, called a \textbf{doubleton} of $x,y$, such that for any $z$, $z\in A$ if and only if $z=x$ or $z=y$.
-\end{prop}
-\begin{proof}
-    Let $x,y$ be objects, then by the Axiom of Pairing, there is an $A$ such that $x\in z$ or $y\in z$. Then let $D = \set{w\in z| w=z\text{ or }w=y}$. It follows immediately that $D$ is the set we after. The Axiom Schema of Restricted Comprehension ensures its uniqueness.
-\end{proof}
-\begin{prop}
-    (Singleton) For any $x$, there is a unique set $S$ such that for any $y$, $y\in S$ if and only if $y= x$.
-\end{prop}
-\begin{proof}
-    The set $\set{x,x}$ is our desired set.
-\end{proof}
-The Axiom of Union and the Axiom of Power Set also faces the same problem, we also need to use Axiom Schema of Restricted Specification on these two two axioms to obtain the desired sets. The proofs go very similarly as the one we just had. 
-\begin{prop}
-    (Power Set) For any $A$, there exist a unique $P$, called the \textbf{power set} of $P$, such that for any $B$, $B\in P$ if and only if $B\subseteq A$.
-\end{prop}
-\begin{proof}
-    Omitted.
-\end{proof}
-\begin{prop}
-    (Union) For any $\mathscr A$, there is a unique set $U$, called the \textbf{generalised union of }$\mathscr A$, such that for any $x$, $x\in U$ if and only if $x\in A$ for some $A\in \mathscr A$.
-\end{prop}
-\begin{proof}
-    Omitted.
-\end{proof}
-\begin{prop}
-    (Generalised Intersection) For any set $\mathscr A$, if $\mathscr A$ is non-empty, there is a set $I$ such that for any $x$, $x\in I$ if and only if $x\in A$ for any $A\in\mathscr A$. 
-\end{prop}
-\begin{rem}
-    We write the generalised union of $\mathscr A$ as $\bigcup\mathscr A$ or $\displaystyle \bigcup_{A\in\mathscr A}A$, the generalised intersection of $\mathscr A$ as $\bigcap \mathscr A$ or $\displaystyle\bigcap_{A\in\mathscr A}A$ and the power set of $A$ as $\mc P(A)$. Moreover, if $\mathscr A= \set{A,B}$, we write $\bigcup \mathscr A = A\cup B = B\cup A$, and $\bigcap A\cap B = B\cap A$. We call $A\cup B$ and $A\cap B$ simply their \textbf{union} and \textbf{intersections} respectively.
-\end{rem}
-Here, we will prove some very trivial yet important properties regarding union, intersections, and power sets.
-\prop{(Associativity of set union) For any set $A,B,C$, $(A\cup B)\cup C = A\cup(B\cup C)$}
-\begin{proof}
-    For any $x$, the following are equivalent 
-    \begin{align*}
-        & x\in (A\cup B)\cup C\\
-        \Leftrightarrow & x\in (A\cup B)\text{ or }x\in C\\
-        \Leftrightarrow & (x\in A\text{ or }x\in B)\text{ or }x\in C\\
-        \Leftrightarrow & x\in A\text{ or }(x\in B\text{ or }x\in C)\\
-        \Leftrightarrow & x\in A \text{ or }x\in B\cup C\\
-        \Leftrightarrow & x\in A \cup(B\cup C)
-    \end{align*}
-    Therefore, $(A\cup B)\cup C = A\cup (B\cup C)$
-\end{proof}
-\begin{prop}
-    {For any set $A,B$, $A\subseteq A\cup B$ and $B\subseteq A\cup B$}
-\end{prop}
-\begin{proof}
-    For any set $x$, if $x\in A$, then $x\in A$ or $x\in B$. Then $x\in A\cup B$. So, $x\in A\cup B$.\\
-    Similarly, $B\subseteq B\cup A$. Since $A\cup B = B\cup A$, we have $B\subseteq A\cup B$.
-\end{proof}
-\begin{prop}
-    {For any set $A$, $A\cup\empty = A$}
-\end{prop}
-\begin{proof}
-    ($\subseteq$) For any $x$, if $x\in A\cup \empty$, then $x\in A$ or $x\in \empty$. But since $x\in\empty$ by definition, $x\in A$. Therefore, $A\cup \empty\subseteq A$\\
-    ($\supseteq$) For any $x$, if $x\in A$, then $x\in A$ or $x\in \empty$. Then $x\in A\cup \empty$. Then $A\subseteq A\cup\empty$\\
-    Therefore, $A\cup\empty = A$
-\end{proof}
-\begin{prop}
-    {For any set $A$, $A\cup A = A$}
-\end{prop}
-\begin{proof}
-    For any $x$, the following are equivlent. 
-    \begin{align*}
-        & x\in A\\
-        \Leftrightarrow & x\in A \text{ or }x\in A\\
-        \Leftrightarrow & x\in A\cup A
-    \end{align*}
-    So, $A\cup A = A$
-\end{proof}
-\begin{prop}
-    {For any set $A,B,C$, if $A\subseteq C$ and $B\subseteq C$, then $A\cup B\subseteq C$}\
-\end{prop}
-\begin{proof}
-    Pick any $x\in A\cup B$, then $x\in A$ or $x\in B$. 
-    \begin{itemize}
-        \item If $x\in A$, since $A\subseteq C$, we have $x\in C$
-        \item If $x\in B$, since $B\subseteq C$, we have $x\in C$
-    \end{itemize}
-    In any case, $x\in C$. So, $A\cup B\subseteq C$.
-\end{proof}
-\begin{prop}
-    {(Distributivity between set intersection and set union) For any set $A,B,C$, $(A\cup C)\cap(B\cup C) = (A\cap B)\cup C$ and $(A\cap C)\cup (B\cap C) = (A\cup B) \cap C$}
-\end{prop}
-\begin{proof}
-    For any $x$, the following are equivalent 
-    \begin{align*}
-        & x\in (A\cup C)\cap(B\cup C)\\
-        \Leftrightarrow & x\in (A\cup C) \text{ and }x\in(B\cup C)\\
-        \Leftrightarrow & (x\in A\text{ or }x\in C)\text{ and }(x\in B\text{ or }x\in C)\\
-        \Leftrightarrow & (x\in A \text{ and }x\in B)\text{ or }x\in C\\
-        \Leftrightarrow & (x\in A\cap B)\text{ or }x\in C\\
-        \Leftrightarrow & x\in(A\cap B)\cup C
-    \end{align*}
-    \begin{align*}
-        & x\in (A\cap C)\cup (B\cap C)\\
-        \Leftrightarrow & x\in A\cap C \text{ or }x\in B\cap C\\
-        \Leftrightarrow & (x\in A\text{ and }x\in C)\text{ or }(x\in B\text{ and }x\in C)\\
-        \Leftrightarrow & (x\in A\text{ or }x\in B) \text{ and }x\in C\\
-        \Leftrightarrow & x\in A\cup B \text{ and }x\in C\\
-        \Leftrightarrow & x\in(A\cup B)\cap C
-    \end{align*}
-\end{proof}
-\begin{cor}
-    {For any set $A,B,C$, $A\cap (B\cup C) = (A\cap B)\cup  (A\cap C)$ and $A\cup(B\cap C) = (A\cup B)\cap (A\cup C)$}
-\end{cor}
-\begin{proof}
-    \begin{gather*}
-        A\cap (B\cup C) = (B\cup C)\cap A = (B\cap A)\cup (C\cap A) = (A\cap B)\cup (A\cap C)\\
-        A\cup (B\cap C) = (B\cap C)\cup A = (B\cup A)\cap (C\cup A) = (A\cup B)\cap (A\cup C)
-    \end{gather*}
-\end{proof}
-\begin{prop}
-    {(Distributivity between set intersection and set complement) For any set $A,B,C$, $(A\cap B)\setminus C = (A\setminus C) \cap (B\setminus C)$}
-\end{prop}
-\begin{proof}
-    For any $x$, the following are equivalent 
-    \begin{align*}
-        & x\in(A\cap B)\setminus C\\
-        \Leftrightarrow & x\in A\cap B\text{ and }x\not\in C\\
-        \Leftrightarrow & (x\in A\text{ and }x\in B)\text{ and }x\not\in C\\
-        \Leftrightarrow & (x\in A\text{ and }x\in B)\text{ and }(x\not\in C\text{ and } x\not\in C)\\
-        \Leftrightarrow & (x\in A\text{ and }x\not\in C)\text{ and }(x\in B\text{ and }x\not\in C)\\
-        \Leftrightarrow & x\in A\setminus C \text{ and }x\in B\setminus C\\
-        \Leftrightarrow & x\in (A\setminus C)\cap (B\setminus C)
-    \end{align*}
-    So, $(A\cap B)\setminus C = (A\setminus C)\cap (B\setminus C)$
-\end{proof}
-\begin{prop}
-    {(Distributivity of set complement I) For any set $A,B,C$, $(A\cup B)\setminus C = (A\setminus C)\cup (B\setminus C)$ and $(A\cap B)\setminus C = (A\setminus C)\cup (A\setminus B)$}
-\end{prop}
-\begin{proof}
-    For all $x$, the following are equivalent, 
-    \begin{align*}
-        & x\in(A\cup B)\setminus C\\
-        \Leftrightarrow & x\in A\cup B \text{ and }x\not\in C\\
-        \Leftrightarrow & (x\in A\text{ or }x\in B)\text{ and }x\not\in C\\
-        \Leftrightarrow & (x\in A\a x\not\in C)\o (x\in B\a x\not\in C)\\
-        \Leftrightarrow & x\in A\setminus C\o x\in B\setminus C\\
-        \Leftrightarrow & x\in(A\setminus C)\cup(B\setminus C)
-    \end{align*}
-    So, $(A\cup B)\setminus C = (A\setminus C)\cup (B\setminus C)$
-    \begin{align*}
-        & x\in(A\cap B)\setminus C\\
-        \Leftrightarrow & x\in(A\cap B)\a x\not\in C\\
-        \Leftrightarrow & (x\in A\a x\in B)\a x\not\in C\\
-        \Leftrightarrow & (x\in A \a x\in B)\a (x\not\in C \a x\not\in C)\\
-        \Leftrightarrow & (x\in A\a x\not\in C)\a (x\in B\a x\not\in C)\\
-        \Leftrightarrow & x\in A\setminus C \a x\in B\setminus C\\
-        \Leftrightarrow & x\in (A\setminus C)\cap (B\setminus C)
-    \end{align*}
-    So, $(A\cap B)\setminus C = (A\setminus C)\cup (A\setminus B)$
-\end{proof}
-\prop{(Distributivity of set complement II/De Morgan's law)For any set $A,B,C$, $A\setminus(B\cap C) = (A\setminus B) \cup (A\setminus C)$ and $A\setminus (B\cup C) = (A\setminus B)\cap (A\setminus C)$}
-\begin{proof}
-    For any $x$, the following are equivalent,
-    \begin{align*}
-        & x\in A\setminus (B\cap C)\\
-        \Leftrightarrow & x\in A \text{ and }x\not\in B\cap C\\
-        \Leftrightarrow & x\in A \text{ and }(x\not\in B\text{ or }x\not\in C)\\
-        \Leftrightarrow & (x\in A\text{ and }x\not\in B)\text{ or }(x\in A\text{ and }x\not\in C)\\
-        \Leftrightarrow & x\in A\setminus B\text{ or }x\in A\setminus C\\
-        \Leftrightarrow & x\in (A\setminus B)\cup(A\setminus C)
-    \end{align*}
-    So, $A\setminus(B\cap C) = (A\setminus B) \cup (A\setminus C)$\\
-    \begin{align*}
-        & x\in A\setminus (B\cup C)\\
-        \Leftrightarrow & x\in A\text{ and }x\not\in B\cup C\\
-        \Leftrightarrow & x\in A \text{ and }(x\not\in B\text{ and }x\not\in C)\\
-        \Leftrightarrow & (x\in A \text{ and } x\in A)\text{ and }(x\not\in B\text{ and }x\not\in C)\\
-        \Leftrightarrow & (x\in A\text{ and }x\not\in B)\text{ and }(x\in A\text{ and }x\not\in C)\\
-        \Leftrightarrow & x\in A\setminus B\text{ and }x\in A\setminus C\\
-        \Leftrightarrow & x\in(A\setminus B)\cap(A\setminus C)\\
-    \end{align*}
-    So, $A\setminus (B\cup C) = (A\setminus B)\cap (A\setminus C)$
-\end{proof}
-\begin{prop}
-    For any $A\in\mathscr A$, $A\subseteq \bigcup\mathscr A$
-\end{prop}
-\begin{proof}
-    For any $A\in\mathscr A$, for any $x\in A$, by the definition of generalised union, we have $x\in\mathscr A$, then $A\subseteq \bigcup \mathscr A$.
-\end{proof}
-\begin{prop}
-    Let $\mathscr A$ be a set. Suppose $A\in\mathscr A$. Then $\bigcap\mathscr A\subseteq A$.
-\end{prop}
-\begin{proof}
-    For any $x\in \bigcap\mathscr A$, we have $x\in B$ for any $B\in\mathscr A$. In particular, we have $x\in A$. 
-\end{proof}
-\begin{prop}
-    For any $\mathscr A, \mathscr B$, if $\mathscr A\subseteq \mathscr B$, then $\bigcup\mathscr A\subseteq \bigcup\mathscr B$.
-\end{prop}
-\begin{proof}
-    Let $\mathscr A\subseteq \mathscr B$. The for any $x\in \bigcup A$, there is some $A\in\bigcup \mathscr A$ such that $x\in A$. Since $\mathscr A\subseteq B$, then $A$ is also a subset of $B$, then $x\in \bigcup B$.
-\end{proof}
-\begin{prop}
-    For any $\mathscr A, \mathscr B$, if $\mathscr A\subseteq \mathscr B$, then $\bigcap \mathscr B\subseteq \bigcap\mathscr A$
-\end{prop}
-\begin{proof}
-    Let $x\in\bigcap\mathscr B$, then for any $A\in\mathscr A$, since $\mathscr A\subseteq \mathscr B$, we have $A\in\mathscr B$. By definition of intersection, we have $x\in A$. Therefore, by the definition of intersection again, $x\in \bigcap\mathscr A$.
-\end{proof}
-\begin{prop}
-    For any set $A$, $\empty\in\mc P(A)$
-\end{prop}
-\begin{proof}
-    Since $\empty\subseteq P$, $\empty\in \mc P(A)$
-\end{proof}
-\begin{prop}
-    For any set $A$, $A\in\mc P(A)$.
-\end{prop}
-\begin{proof}
-    Since $A\subseteq A$, therefore $A\in\mc P(A)$.
-\end{proof}
-\begin{prop}
-    Let $A,B$ be sets. Then $A\subseteq B$ if and only if $\mc P(A)\subseteq \mc P(B)$.
-\end{prop}
-\begin{proof}
-    ~
-    \begin{itemize}
-        \item $(\Rightarrow)$ Let $C\in\mc P(A)$, which implies $C\subseteq B$. Then by properties of subset relation, we have $C\subseteq A$. Therefore, $C\in \mc P(B)$.
-        \item ($\Leftarrow$) For any $x\in A$, we have $\set{x}\in\mc P(A)$. Since $\mc P(A)\subseteq \mc P(B)$, $\set{x}\in\mc P(B)$ as well. Then $\set{x}\subseteq B$ and hence $x\in B$.
-    \end{itemize}
-\end{proof}
-\begin{prop}
-    Let $A,B$ be sets, then $\mc P(A)\cap \mc P(B) = \mc P(A\cap B)$ 
-\end{prop}
-\begin{proof}
-    For any $C$, the following are equivalent 
-    \begin{align*}
-        & C\in\mc P(A)\cap \mc P(B)\\
-        \Leftrightarrow & C\in\mc P(A)\a C\in\mc P(B)\\
-        \Leftrightarrow & C\subseteq A\a C\subseteq B\\
-        \Leftrightarrow & C\subseteq A\cap B\\
-        \Leftrightarrow & C\in\mc P(A\cap B)
-    \end{align*}
-\end{proof}
-\begin{prop}
-    Let $A,B$ be sets, then $\mc P(A)\cup\mc P(B)\subseteq \mc P(A\cup B).$
-\end{prop}
-\begin{proof}
-    For any $C\in\mc P(A)\cup\mc P(B)$, we have $C\subseteq A$ or $C\subseteq B$. In any case, we have $C\subseteq A\cup B$. Therefore, $C\in\mc P(A\cup B)$
-\end{proof}
-\begin{rem}
-    Readers may be tempted to state that $\mc P(A)\cup\mc P(A) = \mc P(A\cup B)$, so that the two preceding propositions will be parallel. But it is indeed that case that $\mc P(A\cup B)\subseteq \mc P(A)\cup \mc P(B)$ is not necessarily true. Consider the set $\set{x},\set{y}$, where $x,y$ are distinct objects. Then we have the following 
-    \begin{align*}
-        \mc P(\set{x}) &= \set{\empty, \set{x}} \\
-        \mc P(\set{y}) &= \set{\empty, \set{y}} \\
-        \mc P(\set{x})\cup\mc P(\set{y}) &= \set{\empty, \set{x},\set{y}} \\
-        \mc P(\set{x} \cup\set{y}) &= \set{\empty, \set{x,y}}
-    \end{align*}
-    Clearly, we cannot have $\mc P(A\cup B)\subseteq \mc P(A)\cup \mc P(B)$ is not necessarily true. Consider the set $\set{x},\set{y}$.
-\end{rem}
-\begin{prop}
-    Let $A$ be a set, then $\bigcup \mc P(A) = A$
-\end{prop}
-\begin{proof}
-    Let $x$ be an object, the followings are equivalent 
-    \begin{align*}
-        & x\in \bigcup \mc P(A)\\
-        \Leftrightarrow & x\in B\text{ for some }B\in\mc P(A)\\
-        \Leftrightarrow & x\in B \text{ for some }B\subseteq A
-    \end{align*}
-    ~
-    \begin{itemize}
-        \item ($\subseteq$) For any $x\in\bigcup \mc P(A)$, we have $x\in B$ for some $B\in \mc P(A)$. It follows that $B\subseteq A$ and hence $x\in A$.
-        \item ($\supseteq$) For any $x\in A$, we have $\set{x}\in\mc P(A)$. This implies that $\set{x}\subseteq \bigcup\mc P(A)$. Since $x\in\set{x}$, we have $x\in\bigcup \mc P(A)$.
-    \end{itemize}
-\end{proof}
-\begin{defn}
-    {(Ordered pair) For all $x,y$, the order pair $(x,y)$ is defined as $(x,y) = \set{\set{x},\set{x,y}}$}
-\end{defn}
-\begin{defn}
-    {(Ordered triple) For all $x,y,z$, the ordered triple $(x,y,z)$ is defined as $(x,y,z) = ((x,y),z)$}
-\end{defn}
-\prop{For all $a,b,c,d$, $(a,b) = (c,d)$ if and only if $a = c$, $b = d$}
-\begin{proof}
-    ~
-    \begin{itemize}
-        \item ($\Rightarrow$) Suppose $(a,b) = (c,d)$.
-        \begin{itemize}
-            \item (\textsc{Case 1}) Suppose $a = b$, then $(a,b) = \set{\set{a},\set{a,b}} = \set{\set{a},\set{a,a}} = \set{\set{a}}$. Also, $\set{\set{c},\set{c,d}} = (c,d) = (a,b) = \set{\set{a}}$. Thus, $\set{c} = \set{c,d} = \set{a}$ and therefore $c = d = a$. Since $a = b$, $b = d$,
-            \item (\textsc{Case 2}) Suppose $a\neq b$. Since $(a,b)= (c,d)$, we have $\set{a} = \set{c}$ or $\set{a} = \set{c,d}$. Then $a = c$ or $a = c = d$. In any case, $a = c$. We have also $\set{b} = \set{c}$ or $\set{b} = \set{c,d}$. But since $b\neq a$, $b\neq c$. Then it is not the case that $\set{b} = \set{c}$. So, $\set{b} = \set{c,d}$. Then we have $b = c$ or $ b = d$. Since $b\neq c$, we have $b = d$.
-        \end{itemize}
-        \item ($\Leftarrow$) Suppose $a = c$, $b = d$. Then $(a,b) = \set{\set{a},\set{a,b}} = \set{\set{c}, \set{c,d}} = (c,d)$
-    \end{itemize}
-\end{proof}
-\prop{For all $a,b,c,d,e,f$, $(a,b,c) = (d,e,f)$ if and only if $a=d,b=e,c=f$}
-\begin{proof}
-    ($\Rightarrow$) Suppose $(a,b,c) = (d,e,f)$, then $\set{((a,b),c)} = ((d,e),f)$. Then $(a,b) = (d,e)$ and $c=f$. Since $(a,b) = (d,e)$, we have $a = d$ and $b=e$.\\
-    ($\Leftarrow$) Suppose $a = d, b = e, c = f$, then $(a,b,c) = ((a,b) ,c) = ((d,e),f) = (d,e,f)$
-\end{proof}
-\begin{prop}
-    {\textbf{(Cartesian product)} For any set $A,B$, there exist a unique set $C$ such that for any $z$, $z\in C$ if and only if $z= (x,y)$ for some $x\in A, y\in B$}.
-\end{prop}
-\begin{proof}
-        The desired $C$ is the set $C =  \set{z\in\mathcal P (\mathcal P(A\cup B))|\text{ there exist some unique }x\in A,y\in B\text{ such that }(x,y) = z}$
-\end{proof}
-\begin{rem}
-    We will denote the Cartesian product of $A,B$ as $A\times B$.
-\end{rem}
-\subsection{Axiom of Infinity and Axiom of Choice}
-We are left with two Axioms 
-\begin{defn}
-    Let $A$ be a set, then the \textbf{successor} of $A$, denoted $S(A)$, is the set $S(A):=A\cup S(A)$
-\end{defn}
-\begin{ax}
-    \textbf{(Axiom of Infinity)} There exists a set $I$, called the \textbf{inductive set}, such that $\empty\in I$ and for any $x$, if $x\in I$, then $S(x)\in I$
-\end{ax}
-\begin{ax}
-    \textbf{(Axiom of Choice)} Let $A$ be non-empty and pairwise disjoint. There exists a 
-\end{ax}
+We had quite some discussion with Axiom of Extension, Axiom Schema of Specification, Axiom of Pairing, Axiom of Union, and Axiom of Power. But in addition to these, we have some new axioms as well. These axioms are all results proved to be necessary and unprovable from the rest of ZFC. We will only discuss axiom of foundation here. We delay the discussion of Axiom Schema of Replacement, Axiom of Infinity, and Axiom of Choice until later.
