--- a/sections/Logic.tex
+++ b/sections/Logic.tex
@@ -24,3 +24,4 @@
     What I have said here remains pretty vague. What makes an argument valid? What makes statements true? We all have a vague idea of validity and true, but not a clear-cut \textit{definition} of them. We will clarify these ideas as we progress. We will not include a full-blown philosophical discourse. This is a book on mathematics afterall. But we will clarify these ideas "clear enough" so that we can safely use them in constructing our mathematical universe.\\
     Formal lo
     \section{Propositions, Facts, and Truth}
+    \section{Schema}
